frontend/src/widgets/header/ui/header.module.scss
@use "../../../shared/styles/tokens" as t;
@use "../../../shared/styles/lib/responsive-design/_fluid-scale.scss" as fs;

@use "../../../shared/styles/tokens/motion" as motion;
@use "../../../shared/styles/tokens/spacing" as spacing;
@use "../../../shared/styles/tokens/elevation" as elev;
@use "../../../shared/styles/tokens/typography" as typo;
@use "../../../shared/styles/tokens/shape" as shape;

@use "../../../shared/styles/config.scss" as conf;

$horizontal-header-height: spacing.$md-sys-spacing-16;
$nav-rail-width: 360px;
$z-index: 1000;

$md-comp-nav-rail-nav-padding: t.$md-sys-spacing-4;

.header {
  &::after {
    content: "";
    position: fixed;
  }
}

.navRail {
  transition-property: translate;
  @include motion.effects("slow");

  &.open {
    translate: 0%;
    // min-width: 220px;
    // max-width: 360px;
    opacity: 1;
    visibility: visible;
    pointer-events: auto;
  }

  &.closing {
    translate: -100%;
    opacity: 1;
    visibility: visible;
  }

  &.closed {
    translate: -100%;
    visibility: hidden;
    opacity: 0;
    pointer-events: none;
  }
}

.appBar {
  z-index: $z-index;

  position: fixed;
  left: 0;
  right: 0;
  top: 0;

  display: flex;
  justify-content: space-between;
  align-items: center;

  height: conf.$app-bar-height;
  padding-inline: fs.fluid-scale(
    t.$md-sys-spacing-1,
    t.$md-sys-spacing-6,
    t.$md-sys-viewport-compact,
    t.$md-sys-viewport-expanded
  );
  padding-block: spacing.$md-sys-spacing-3;

  background-color: var(--md-sys-color-surface-container-high);
  color: var(--md-sys-color-on-surface);

  .left {
    display: flex;
    align-items: center;
    gap: spacing.$md-sys-spacing-1;

    .menuButton {
      display: flex;
      align-items: center;
      justify-content: center;

      .menuIcon {
        width: 32px;
        height: 32px;
      }
    }

    .brandName {
      display: flex;
      align-items: center;

      @include typo.typescale("title-large");
      font-size: fs.fluid-scale(
        16px,
        t.get-typescale-value("title-large"),
        t.$md-sys-viewport-compact,
        t.$md-sys-viewport-medium
      );
    }
  }

  .cta {
    padding-inline: fs.fluid-scale(
      t.$md-sys-spacing-2,
      t.$md-sys-spacing-4,
      t.$md-sys-viewport-compact,
      t.$md-sys-viewport-medium
    );

    font-size: fs.fluid-scale(
      14px,
      t.get-typescale-value("title-medium"),
      t.$md-sys-viewport-compact,
      t.$md-sys-viewport-medium
    );
  }
}

.navRail {
  z-index: $z-index;

  position: fixed;
  left: 0;
  top: conf.$app-bar-height;
  bottom: 0;

  width: $nav-rail-width;

  background-color: var(--md-sys-color-surface-container);

  &Inner {
    display: flex;
    height: 100%;
  }

  .routingNav {
    flex-shrink: 0;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;

    width: 96px;
    padding: $md-comp-nav-rail-nav-padding;

    .navItem {
      display: flex;
      justify-content: center;
      align-items: center;
      flex-direction: column;
      gap: spacing.$md-sys-spacing-1;

      @include typo.typescale("label-medium");

      --md-comp-text-action-color: var(--md-sys-color-on-surface-variant);

      &:hover {
        --md-comp-text-action-color: var(--md-sys-color-on-surface);
      }

      .navIcon {
        width: 32px;
        height: 32px;
      }
    }

    .textThemeToggle {
      --md-comp-text-action-color: var(--md-sys-color-on-surface-variant);

      overflow: hidden;

      border: 1px solid var(--md-sys-color-outline-variant);
      padding: t.$md-sys-spacing-4;

      .themeIconContainer {
        position: relative;

        height: 24px;
        width: 24px;
      }

      .themeIcon {
        position: absolute;
        left: 0;
        top: 0;

        height: 24px;
        width: 24px;

        translate: -50% 200%;

        transition-property: translate;
        @include t.spatial("default");

        &.active {
          translate: 0 0;
        }
      }
    }
  }

  .pageIndex {
    flex: 1 0 0%;

    padding: $md-comp-nav-rail-nav-padding;
    padding-top: t.$md-sys-spacing-2;
    border-left: 1px solid var(--md-sys-color-outline-variant);

    ul {
      display: flex;
      flex-direction: column;
      // gap: spacing.$md-sys-spacing-3;

      .pageIndexLink {
        --md-comp-text-action-color: var(--md-sys-color-on-surface-variant);

        justify-content: start;

        @include typo.typescale-emphasized("title-small");
        font-weight: 500;
      }
    }
  }
}

